@@ -13,7 +13,10 @@ import com.chadev.xcape.core.domain.request.ReservationRequest;
 import com.chadev.xcape.core.domain.type.RoomType;
 import com.chadev.xcape.core.exception.ApiException;
 import com.chadev.xcape.core.exception.XcapeException;
-import com.chadev.xcape.core.repository.*;
+import com.chadev.xcape.core.repository.PriceRepository;
+import com.chadev.xcape.core.repository.ReservationHistoryRepository;
+import com.chadev.xcape.core.repository.ReservationRepository;
+import com.chadev.xcape.core.repository.ThemeRepository;
 import com.chadev.xcape.core.service.notification.NotificationTemplateEnum;
 import com.chadev.xcape.core.service.notification.kakao.KakaoTalkNotification;
 import com.chadev.xcape.core.service.notification.kakao.KakaoTalkResponse;
@@ -24,22 +27,26 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 
 import java.time.LocalDate;
+import java.time.LocalTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-import static com.chadev.xcape.core.service.notification.NotificationTemplateEnum.CANCEL_RESERVATION;
-import static com.chadev.xcape.core.service.notification.NotificationTemplateEnum.REGISTER_RESERVATION;
+import static com.chadev.xcape.core.service.notification.NotificationTemplateEnum.*;
 
 @Slf4j
 @RequiredArgsConstructor
 @Service
 public class ReservationService {
 
-    private final CorePriceRepository corePriceRepository;
+    private final PriceRepository priceRepository;
     private final ReservationRepository reservationRepository;
-    private final CoreThemeRepository coreThemeRepository;
+    private final ThemeRepository themeRepository;
     private final ReservationHistoryRepository reservationHistoryRepository;
     private final DtoConverter dtoConverter;
 
@@ -47,12 +54,25 @@ public class ReservationService {
     private final SmsNotification smsNotification;
     private final ObjectMapper objectMapper;
 
-    public List<ThemeDto> getThemesWithReservations(Long merchantId, LocalDate date){
-        return coreThemeRepository.findThemesByMerchantId(merchantId).stream().map((theme) -> {
-            ThemeDto themeDto = dtoConverter.toThemeDto(theme);
-            themeDto.setReservationList(reservationRepository.findReservationsByThemeIdAndDateOrderBySeq(theme.getId(), date).stream().map(dtoConverter::toReservationDto).toList());
-            return themeDto;
-        }).toList();
+    public List<ThemeDto> getThemesWithReservations(Long merchantId, LocalDate date) {
+
+        List<Reservation> reservationListByMerchantId = reservationRepository.findByMerchantIdAndDateOrderBySeq(merchantId, date);
+        List<Theme> themeListByMerchantId = themeRepository.findThemesByMerchantId(merchantId);
+        List<ThemeDto> resultThemeList = new ArrayList<>();
+
+        themeListByMerchantId.stream()
+                             .filter(Theme::getUseYn)
+                             .forEach(theme -> {
+                                 List<ReservationDto> reservationListByThemeId =
+                                         reservationListByMerchantId.stream()
+                                                                    .filter(reservation -> Objects.equals(theme.getId(), reservation.getThemeId()))
+                                                                    .map(dtoConverter::toReservationDto).collect(Collectors.toList());
+                                 ThemeDto themeDto = dtoConverter.toThemeDto(theme);
+                                 themeDto.setReservationList(reservationListByThemeId);
+                                 resultThemeList.add(themeDto);
+                             });
+
+        return resultThemeList;
     }
 
     // 예약 등록/수정
@@ -65,11 +85,11 @@ public class ReservationService {
                 participantCount: {}
                 """, request.getReservedBy(), request.getPhoneNumber(), request.getParticipantCount());
         Reservation reservation = reservationRepository.findById(reservationId).orElseThrow(IllegalArgumentException::new);
-        Theme theme = coreThemeRepository.findById(reservation.getThemeId()).orElseThrow(XcapeException::NOT_EXISTENT_THEME);
+        Theme theme = themeRepository.findById(reservation.getThemeId()).orElseThrow(XcapeException::NOT_EXISTENT_THEME);
 
         boolean isRegister = !reservation.getIsReserved();
         if (RoomType.GENERAL.is(request.getRoomType())) {
-            Price price = corePriceRepository.findFirstByThemeAndPerson(theme, request.getParticipantCount());
+            Price price = priceRepository.findFirstByThemeAndPerson(theme, request.getParticipantCount());
             reservation.setIsReserved(true);
             reservation.setRoomType(RoomType.GENERAL);
             reservation.setReservedBy(request.getReservedBy());
@@ -77,7 +97,7 @@ public class ReservationService {
             // set price
             reservation.setPrice(price.getPrice());
             reservation.setParticipantCount(request.getParticipantCount());
-        } else if (RoomType.OPEN_ROOM.is(request.getRoomType())){
+        } else if (RoomType.OPEN_ROOM.is(request.getRoomType())) {
             reservation.setIsReserved(true);
             reservation.setRoomType(RoomType.OPEN_ROOM);
             reservation.setPrice(convertOpenRoomPrice(request.getParticipantCount()));
@@ -145,7 +165,7 @@ public class ReservationService {
 
     // 지점별 빈 예약 생성
     public void createEmptyReservationByMerchant(Merchant merchant, LocalDate date) throws IllegalArgumentException {
-        List<Theme> themeList = coreThemeRepository.findThemesWithTimeTableListByMerchantId(merchant);
+        List<Theme> themeList = themeRepository.findThemesWithTimeTableListByMerchantId(merchant);
         themeList.forEach(theme ->
                 theme.getTimetableList().forEach(timetable -> {
                     try {
@@ -182,5 +202,37 @@ public class ReservationService {
         }
 
         return participantCount * 24000;
+    }
+
+    public void reservationReminder() {
+        LocalDate today = LocalDate.now();
+        LocalTime currentTime = LocalTime.now();
+        LocalTime targetTime = currentTime.plusMinutes(30).withSecond(0).withNano(0);
+        LocalTime startTime = targetTime.minusMinutes(2);
+        LocalTime endTime = targetTime.plusMinutes(2);
+
+        List<ReservationDto> reservationDtoList = reservationRepository.findByIsReservedAndDateAndTimeBetweenAndRoomType(true, today, startTime, endTime, RoomType.GENERAL)
+                .stream()
+                .map(dtoConverter::toReservationDto)
+                .toList();
+
+        if (CollectionUtils.isEmpty(reservationDtoList)) {
+            return;
+        }
+
+        List<NotificationTemplateEnum.ReservationRemindParam> reservationRemindParamList = new ArrayList<>();
+
+        for (ReservationDto reservationDto : reservationDtoList) {
+            reservationRemindParamList.add(reservationDto.getReservationRemindParam(objectMapper));
+        }
+
+        KakaoTalkResponse kakaoTalkResponse = kakaoTalkNotification.sendMessage(REMIND_RESERVATION.getKakaoTalkRequest(reservationRemindParamList));
+
+        if (!kakaoTalkResponse.getHeader().isSuccessful) {
+            SmsResponse smsResponse = smsNotification.sendMessage(REMIND_RESERVATION.getSmsRequest(reservationRemindParamList));
+            if (!smsResponse.getHeader().isSuccessful) {
+                throw new ApiException(kakaoTalkResponse.getHeader().getResultCode(), kakaoTalkResponse.getHeader().getResultMessage());
+            }
+        }
     }
 }
